Don't create huge surfaces.  We need a surface big enough to hold our widget'spixel dimensions, not twip dimensions.  Bug 384266, r+sr=roc